更好的加载速度

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>HSHMENG GitHub FORUM</title>
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/sidebar.css">
+    <link rel="stylesheet" href="css/ban_copy.css">
 </head>
 <body>
 <h1 style="text-align:center; margin-bottom:30px;">HSHMENG GitHub FORUM</h1>
