--- a/html/FaBuPingLun.html
+++ b/html/FaBuPingLun.html
@@ -36,7 +36,7 @@
 <img src="FaBuPingLun/05.png"/>
 <p>点击发布，进入发布页面</p>
 <p>①填写标题</p>
-<p>②填写内容（已经禁用Markdown语法）</p>
+<p>②填写内容（支持图片，Markdown语法）</p>
 <p>③点击发布</p>
 </body>
 </html>
