--- a/html/ShanChuTieZi.html
+++ b/html/ShanChuTieZi.html
@@ -2,9 +2,42 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>删除帖子和评论的方法</title>
+    <title>删除或修改帖子和评论的方法</title>
+    <style>
+        img {
+            display: block;
+            width: 90%;
+            height: auto;
+            margin: 0 auto;
+        }
+        p {
+            text-align: center;
+            font-size: 25px;
+            font-weight: 1000;
+        }
+    </style>
 </head>
 <body>
-
+<img src="ShanChuTieZi/01.png"/>
+<p>①是帖子内容</p>
+<p>②及其下面的所有都是评论内容</p>
+<p>③删除按钮（此操作将会删除整个帖子内容包括下面的评论）</p>
+<img src="ShanChuTieZi/02.png"/>
+<p>每一个内容或者评论右上角都有三个点</p>
+<p>①复制链接</p>
+<p>②回复内容</p>
+<p>③修改内容</p>
+<p>④举报内容</p>
+<img src="ShanChuTieZi/03.png"/>
+<p>你也可以通过“Close issue”按钮关闭帖子</p>
+<p>这不会删除帖子内容，只是让帖子临时关闭，所有人在关闭页面都可以看到</p>
+<img src="ShanChuTieZi/04.png"/>
+<p>在不是自己的关闭的帖子中，依旧可以评论，还可以进行复制链接、引用回复、新帖子中回复</p>
+<img src="ShanChuTieZi/05.png"/>
+<p>在是自己的关闭的帖子中，依旧可以修改、删除、评论，还可以进行复制链接、引用回复、新帖子中回复，或者重新开启</p>
+<img src="ShanChuTieZi/06.png"/>
+<p>在自己的评论中，可以标记隐藏自己的评论，但是这依旧是可见的</p>
+<img src="ShanChuTieZi/07.png"/>
+<p>由①可知无法给其他人隐藏或显示，由②可知是隐藏的，由③点击可以显示</p>
 </body>
 </html>
