更新报错及其解决方案

--- a/html/ShanChuTieZi.html
+++ b/html/ShanChuTieZi.html
@@ -2,7 +2,7 @@
 <html lang="zh">
 <head>
     <meta charset="UTF-8">
-    <title>删除或修改帖子和评论的方法</title>
+    <title>删除或修改帖子或评论</title>
     <style>
         img {
             display: block;
