--- a/html/BaoCuo.html
+++ b/html/BaoCuo.html
@@ -60,6 +60,7 @@
             color: #333;
         }
     </style>
+    <link rel="stylesheet" href="../css/ban_copy.css">
 </head>
 <body>
 <div class="container">
