更新更多报错提示解决方案

--- a/html/BaoCuo.html
+++ b/html/BaoCuo.html
@@ -78,6 +78,10 @@
             <td>加载失败: Cannot read properties of undefined (reading 'avatar_url')</td>
             <td>请求的API中出现错误，请刷新页面清除缓存或者等待API更新</td>
         </tr>
+        <tr>
+            <td>加载失败: marked is not defined</td>
+            <td>脚本加载顺序错误失败或模块引入方式不正确，请刷新网页重试</td>
+        </tr>
     </table>
 </div>
 </body>
