解决emoji映射问题

--- a/html/BaoCuo.html
+++ b/html/BaoCuo.html
@@ -82,6 +82,10 @@
             <td>加载失败: marked is not defined</td>
             <td>脚本加载顺序错误失败或模块引入方式不正确，请刷新网页重试</td>
         </tr>
+        <tr>
+            <td>加载失败: Failed to fetch</td>
+            <td>JavaScript的Fetch API请求失败，请使用加速器或者刷新重试</td>
+        </tr>
     </table>
 </div>
 </body>
